--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,18 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+# Virtual Environment
+venv/
+env/
+
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Jupyter
+.ipynb_checkpoints/
+
+# OS files
+.DS_Store
+Thumbs.db
